<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <SearchView
        android:id="@+id/simpleSearchView"
        android:layout_width="302dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/back" />

    </SearchView>

    <Button
        android:id="@+id/button"
        android:layout_width="257dp"
        android:layout_height="40dp"
        android:background="#DAE589EF"
        android:onClick="MainActivity3"
        android:text="@string/suvi_shenali"
        android:textAlignment="center"
        android:textColorHighlight="#9C27B0"
        android:textColorHint="#E91E63"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:text="@string/a_seasonal_professional"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0"
        tools:text="A seosonal professional" />

    <Button
        android:id="@+id/button2"
        android:layout_width="287dp"
        android:layout_height="44dp"
        android:background="#DAE589EF"
        android:onClick="MainActivity3"
        android:text="@string/rushini_virun"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.274" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="182dp"
        android:layout_height="44dp"
        android:text="@string/retron_chic"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="264dp"
        android:layout_height="51dp"
        android:background="#DAE589EF"
        android:onClick="MainActivity3"
        android:text="@string/chathu_aben"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/newbie"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="202dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Search Staff"
        app:layout_constraintBottom_toTopOf="@+id/simpleSearchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="114dp"
        android:layout_height="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/p1"
        tools:layout_editor_absoluteY="91dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="195dp"
        android:layout_height="75dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/p2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="138dp"
        android:layout_height="87dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/p3" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="103dp"
        android:layout_height="99dp"
        app:srcCompat="@drawable/back"
        tools:layout_editor_absoluteX="292dp"
        tools:layout_editor_absoluteY="36dp" />


</androidx.constraintlayout.widget.ConstraintLayout>